--- a/views/login/login.ejs
+++ b/views/login/login.ejs
@@ -21,9 +21,9 @@
     <% loginError.forEach(function(e){ %>
         <p class="error_message"><%= e %><p>
     <% }) %>
-    <button class="submit_btn" type="submit">Submit</button>
+    <button class="btn btn-blue submit_btn" type="submit">Submit</button>
   </form>
-  <a href="javascript:history.back()"><button>Back</button>
+  <a href="javascript:history.back()"><button class="btn btn-black">Back</button>
 </div>
 
 <!-- main end -->
