--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,5 +1,7 @@
 <!-- views/partials/head.ejs-->
 <meta charset="utf-8">
+<meta http-equiv="x-ua-compatible" content="ie=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <link rel="stylesheet" href="/css/master.css">
 <script
   src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
@@ -7,4 +9,3 @@
   crossorigin="anonymous"></script>
 <script type="text/javascript" src="/js/form_validation.js"></script>
 <script type="text/javascript" src="/js/highlight.js"></script>
-<title>Nodejs Board</title>
