--- a/public/css/master.css
+++ b/public/css/master.css
@@ -20,14 +20,35 @@ footer{
   text-align:center;
   padding: 20px 0;
 }
+
+input[type=text],input[type=password], select, textarea  {
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
 .float_right{
   float:right;
   margin-left:5px;
 }
-.error_message{
+.message{
   color: tomato;
 }
 
+.content{
+  padding: 20px;
+}
+
+.comment{
+ margin: 5px;
+ padding: 5px;
+ border : 1px solid #008CBA;
+ border-radius: 5px;
+}
+
+/*
+  table Sytle
+*/
 table {
     width: 100%;
     border-collapse: collapse;
@@ -46,6 +67,83 @@ table td {
 table tr:hover td {
   color: #004;
 }
+
+/*
+  Button Sytle
+*/
+.btn {
+  border: none;
+  color: white;
+  padding: 12px 30px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 16px;
+  border-radius: 3px;
+  -webkit-transition-duration: 0.4s; /* Safari */
+  transition-duration: 0.4s;
+  cursor: pointer;
+  vertical-align: top;
+}
+
+.btn-green {background-color: #4CAF50;border:2px solid #4CAF50;} /* Green */
+.btn-blue {background-color: #008CBA;border:2px solid #008CBA;} /* Blue */
+.btn-red {background-color: #f44336;border:2px solid #f44336;} /* Red */
+.btn-grey {background-color: #e7e7e7; color: black;border:2px solid #e7e7e7;} /* Gray */
+.btn-black {background-color: #555555;border:2px solid #555555;} /* Black */
+
+.btn-green:hover {background-color:white;color:black;border:2px solid #4CAF50;}
+.btn-blue:hover {background-color:white;color:black;border:2px solid #008CBA;}
+.btn-red:hover {background-color:white;color:black;border:2px solid #f44336;}
+.btn-grey:hover {background-color:white;color:black;border:2px solid #e7e7e7;}
+.btn-black:hover {background-color:white;color:black;border:2px solid #555555;}
+
+.btn-green-border {border-radius:3px;background-color:white;color:black;border:2px solid #4CAF50;}
+.btn-blue-border {border-radius:3px;background-color:white;color:black;border:2px solid #008CBA;}
+.btn-red-border {border-radius:3px;background-color:white;color:black;border:2px solid #f44336;}
+.btn-grey-border {border-radius:3px;background-color:white;color:black;border:2px solid #e7e7e7;}
+.btn-black-border {border-radius:3px;background-color:white;color:black;border:2px solid #555555;}
+
+.btn-green-border:hover {background-color:#4CAF50;color:white;}
+.btn-blue-border:hover {background-color:#008CBA;color:white;}
+.btn-red-border:hover {background-color:#f44336;color:white;}
+.btn-grey-border:hover {background-color:#e7e7e7;}
+.btn-black-border:hover {background-color:#555555;color:white;}
+
+.btn-xs {font-size: 10px;padding:10px;}
+.btn-sm {font-size: 12px;}
+.btn-lg {font-size: 16px;}
+.btn-xl {font-size: 20px;}
+
+/*
+  Pagination Style
+*/
+.pagination{
+  display: inline-block;
+  padding: 0;
+  margin: 8px 0;
+}
+.pagination li{
+  display: inline;
+}
+.pagination li a {
+  color: black;
+  float: left;
+  padding: 8px 16px;
+  text-decoration: none;
+  transition: background-color .3s;
+  border:1px solid #ddd;
+  margin:0 4px;
+}
+
+.pagination li a.active {
+  background-color: #008CBA;
+  color: white;
+  border:1px solid #008CBA;
+}
+.pagination a:hover:not(.active) {background-color: #ddd;}
+
+
+
 /*
   Posts Style
 */
@@ -60,7 +158,7 @@ table tr:hover td {
 .login h3,
 .users h3{
   background-color: #75CEF7;
-  padding: 5px 0;
+  padding: 10px 0;
   padding-left: 2px;
 }
 .posts h2,
@@ -108,34 +206,16 @@ table tr:hover td {
   display:block;
   margin:5px 0;
 }
-.posts .posts_form input[type="text"]{
-  width:400px;
-}
-.posts .posts_form textarea{
-  display:block;
-  margin-bottom:10px;
-  width:400px;
-  height: 100px;
-}
+
 .login .submit_btn,
 .users .submit_btn{
   display: block;
   margin-top: 10px;
 }
-.users .show .content{
-  padding-left:15px;
-  padding-bottom:20px;
-}
 .users .show .user_info{
   font-size: 17px;
 }
 
-.pagination{
-  text-align: center;
-}
-.pagination li{
-  display: inline;
-}
 .searchHighligt {
   background-color: yellow;
 }
