--- a/views/posts/edit.ejs
+++ b/views/posts/edit.ejs
@@ -16,13 +16,13 @@
   <form class="posts_form" action="/posts/<%=post._id%>?_method=put" method="post">
     <label>Title</label>
     <input type="text" name="post[title]" value="<%=post.title%>">
-    <label for="">Body</label>
+    <label for="">Contents</label>
     <textarea name="post[body]" rows="8" cols="80"><%=post.body%></textarea>
     <div class="float_right">Author: <%= user.nickname %></div>
-    <button type="submit" name="submit">Submit</button>
+    <button class="btn btn-blue" type="submit" name="submit">Submit</button>
   </form>
   <a href="/posts/<%=post._id%>">
-    <button type="button" name="back">Back</button>
+    <button class="btn btn-black" type="button" name="back">Back</button>
   </a>
 </div>
 
