--- a/views/users/edit.ejs
+++ b/views/users/edit.ejs
@@ -26,9 +26,9 @@
     <label>Password Confirmation <span id="password_confirmation_error" class="error_message"></span></label>
     <input type="password" id="password_confirmation" name="user[passwordConfirmation]" value="">
     <p><small>*Required</small></p>
-    <input type="button" class="submit_btn" value="submit">
+    <input class="btn btn-blue" type="button" class="submit_btn" value="submit">
   </form>
-  <a href="javascript:history.back()"><button>Back</button>
+  <a  href="javascript:history.back()"><button class="btn btn-black">Back</button>
 </div>
 <!-- javascript -->
 <script type="text/javascript" src="/js/userform.js"></script>
