--- a/views/users/show.ejs
+++ b/views/users/show.ejs
@@ -16,10 +16,9 @@
   <div class="content">
     <p class="user_info">Email<small> : <%= user.email %></small></p>
     <p class="user_info">Nickname<small> : <%= user.nickname %></small></p>
-    <p class="user_info">Password<small> : <%= user.password %></small></p>
-    <a href="/users/<%=user._id%>/edit"><button>Edit</button></a>
+    <a href="/users/<%=user._id%>/edit"><button class="btn btn-blue">Edit</button></a>
   </div>
-  <a href="/"><button>Back</button>
+  <a href="/"><button class="btn btn-black">Back</button>
 </div>
 
 <!-- main end -->
